# vfs

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: folders.cmake  vfs-config.cmake.in
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
ext/: CMakeLists.txt
ext/bsw/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
ext/libarchive/: CMakeLists.txt
include/vfs/: archive.hh  directory_iterator.hh  exception.hh  io.hh  modules.hh  mounts.hh  stats.hh  stream.hh  system.hh  vfs.hh  vfs_path.hh
include/vfs/api/: directory_iterator.hh  exception.hh  modules.hh  mounts.hh  path.hh  stats.hh  stdfilesystem.hh  system.hh  vfs_api.h  vfs_cpp_api.hh  vfs_cxx_api.hh  vfs_module.h
include/vfs/api/detail/: wrapped_iterator.hh
include/vfs/detail/: wrapped_iterator.hh
include/vfs/extra/: floppyfs.hh  lhafs.hh  tarfs.hh  zipfs.hh
packaging/: CMakeLists.txt  vfsConfig.cmake
src/: CMakeLists.txt
src/api/: CMakeLists.txt  directory_iterator.cc  filesystem.cc  filesystem.hh  hasher.cc  hasher.hh  io.cc  modules.cc  mount_point.cc  mount_point.hh  mounts.cc  path.cc  stream.cc  system.cc  vfs_config.h.in
src/api/detail/: dentry.cc  dentry.hh  file_system.hh  filesystem.cc  filesystem.hh  fstab.cc  fstab.hh  lru.hh  module_loader.cc  module_loader.hh  modules_table.cc  modules_table.hh  mount_point.cc  mount_point.hh  path.cc  path.hh  refcount.hh  spooky.cc  spooky.hh  stats_converter.cc  stats_converter.hh  stdfilesystem.hh  wrapped_pointer.hh
src/api/physfs/: physfs.cc  physfs.hh  physfs_inode.cc  physfs_inode.hh
src/api/testing/: dll_test_init.cc  test_path.cc
src/example/demo/: CMakeLists.txt  demo.cc
src/ext/: CMakeLists.txt  gflags.CMakeLists.txt
src/extra/: CMakeLists.txt
src/extra/7zipfs/: CMakeLists.txt  test_me.cc
src/extra/7zipfs/7zip-cpp/: 7ZipArchive.cpp  7ZipArchiveItem.cpp  7ZipArchiveOpenCallback.cpp  7ZipArchiveOpenCallback.h  7ZipCodecInfo.cpp  7ZipCompressCodecsInfo.cpp  7ZipCompressCodecsInfo.h  7ZipDllHandler.cpp  7ZipFormatInfo.cpp  7ZipInStreamWrapper.cpp  7ZipInStreamWrapper.h  7ZipOpenArchive.cpp  7zipLibrary.cpp  HelperFuncs.cpp  HelperFuncs.h  OSFunctions_UnixLike.cpp
src/extra/7zipfs/7zip-main/C/: BraIA64.c
src/extra/7zipfs/7zip-main/CPP/Common/: MyCom.h  MyWindows.h
src/extra/7zipfs/7zip-wrapper/: codecs.cc  codecs.hh  com.cc  com.hh  fake_windows.hh  format_info.cc  format_info.hh  objects.cc  objects.hh
src/extra/extra_tools/: CMakeLists.txt  archived_fs.hh  entry_props.hh  read_only_fs.hh
src/extra/floppyfs/: CMakeLists.txt  README.md  bpb.cc  bpb.hh  fat_12.cc  fat_12.hh  floppyfs_file.cc  floppyfs_file.hh  floppyfs_impl.cc  floppyfs_impl.hh  floppyfs_inode.cc  floppyfs_inode.hh  testme.cc
src/extra/floppyfs/fat/: bpb.cc  bpb.hh  directory.cc  directory.hh  driver.cc  driver.hh  fat.cc  fat.hh
src/extra/iso9660/: README.md
src/extra/lhafs/: CMakeLists.txt  input_stream.cc  input_stream.hh  lha_archive.cc  lha_archive.hh  lhafs.cc  lhafs.hh  test_me.cc
src/extra/olefs/: README.md
src/extra/popl/: CMakeLists.txt  popl.hpp
src/extra/rarfs/: CMakeLists.txt
src/extra/tarfs/: CMakeLists.txt  microtar.c  microtar.h  tar_archive.cc  tar_archive.hh  tar_stream.cc  tar_stream.hh  tarfile.cc  tarfile.hh  tarfs_file.cc  tarfs_file.hh  tarfs_impl.cc  tarfs_impl.hh  tarfs_inode.cc  tarfs_inode.hh  testme.cc
src/extra/ui/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.hh  mainwindow.ui  mounts_dialog.hh  mountsdialog.ui  navigation_cursor.hh  navigation_model.cc  navigation_model.hh  navigation_panel.cc  navigation_view.cc  navigation_view.hh
src/extra/ui/modules/: modules.ui  modules_dialog.cc  modules_dialog.hh  modules_model.cc  modules_model.hh
src/extra/ui/mounts/: mounts_dialog.cc  mounts_dialog.hh  mounts_model.cc  mounts_model.hh  mountsdialog.ui
src/extra/ui/navigation/: navigation_model.cc  navigation_model.hh  navigation_panel.hh  navigation_view.cc
src/extra/zipfs/: CMakeLists.txt  miniz-ext.c  testme.cc  zip_archive.cc  zip_archive.hh  zipfs_impl.cc  zipfs_impl.hh  zipfs_inmem_file.cc  zipfs_inmem_file.hh  zipfs_inode.cc  zipfs_inode.hh  zipfs_stream_file.cc  zipfs_stream_file.hh  zipfs_uncompressed_file.cc  zipfs_uncompressed_file.hh
src/modules/: CMakeLists.txt
src/modules/physfs/: CMakeLists.txt  physfs.cc  physfs.hh
src/modules/vfs_api/: CMakeLists.txt  cmd_opts.cc  vfs_cxx_api.cc  vfs_cxx_bridge.cc
src/modules/zipfs/: CMakeLists.txt  zipfs.cc  zipfs.hh
src/physfs/: CMakeLists.txt  physfs.cc  physfs_inode.cc  physfs_inode.hh
src/platform/: CMakeLists.txt
src/platform/platform/: proper_export.hh
src/swig/: CMakeLists.txt  vfs.i
src/swig/python/: CMakeLists.txt  test.py
src/test_utils/: CMakeLists.txt  doctest_entry.hh  sandbox.cc  sandbox.hh  test_data.cc  test_data.hh
src/unittest/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  main.cpp
src/vfs/: CMakeLists.txt  archive.cc  default_logger.cc  default_logger.hh  directory_iterator.cc  error_module.cc  error_module.hh  fs_tree.cc  fs_tree.hh  io.cc  modules.cc  modules_registry.cc  modules_registry.hh  mounts.cc  path.hh  sanity_check.cc  sanity_check.hh  stream.cc  system.cc  system_iface.hh  vfs.cc  vfs_path.cc
src/vfs/detail/: dentry.cc  dentry.hh  file_system.hh  filesystem.cc  fstab.cc  fstab.hh  io_iface.cc  io_iface.hh  module_loader.hh  modules_table.cc  modules_table.hh  mount_point.cc  mount_point.hh  path.cc  stats_converter.cc  stats_converter.hh
src/vfs/physfs/: physfs.cc  physfs.hh  physfs_inode.cc  physfs_inode.hh
src/vfs/testing/: dll_test_init.cc  test_path.cc
test_data/floppyfs/: Disk.img  disk01.img
test_data/lhafs/: test.lha
test_data/tarfs/: disk.tar
unittest/: CMakeLists.txt  lru_test.cc  main.cpp  path_test.cc  sandbox.cc  sandbox.hh  shell.cc  vfs_basic_test.cc  vfs_open_file_test.cc  vfs_read_write_test.cc  vfs_stream_test.cc  vfs_unlink_test.cc  zipfs_test.cc
unittest/extra/: floppyfs_test.cc  lhafs_test.cc  tarfs_test.cc  zipfs_test.cc
unittest/utils/: sandbox.hh  test_data.cc  test_data.hh
