include(ExternalProject)

ExternalProject_Add(bsw_project
		GIT_REPOSITORY git@github.com:devbrain/bsw.git
		INSTALL_DIR "${CMAKE_BINARY_DIR}/bsw/"
		LOG_DOWNLOAD ON
		CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
		)

set (BSW_ROOT ${CMAKE_BINARY_DIR}/bsw)
add_library(bsw::bsw SHARED IMPORTED GLOBAL)

set_target_properties(bsw::bsw PROPERTIES
		IMPORTED_LOCATION ${BSW_ROOT}/lib/libbsw.so
		INTERFACE_INCLUDE_DIRECTORIES ${BSW_ROOT}/include
		INTERFACE_COMPILE_DEFINITIONS "${BSW_COMPILE_DEFINITIONS}")
